--- a/css/styles.css
+++ b/css/styles.css
@@ -560,7 +560,7 @@ img {
   margin-bottom: 20px;
 }
 .footer-social {
-  margin-right: 93px;
+  margin-right: auto;
 }
 .footer-social-list {
   display: flex;
@@ -736,6 +736,7 @@ form-wrap {
   height: 40px;
   padding-left: 42px;
   outline-color: transparent;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-form-icon {
@@ -744,6 +745,7 @@ form-wrap {
   left: 12px;
   transform: translateY(-50%);
   fill: var(--second-color);
+  transition: outline-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .client-comment {
   width: 100%;
@@ -751,6 +753,7 @@ form-wrap {
   padding: 12px 16px;
   resize: none;
   margin-bottom: 20px;
+  transition: outline-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   outline-color: transparent;
   transition: outline-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
